logs/ia636.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/ia636'...
Compiling './lib/python3.5/site-packages/ia636/iacolorhist.py'...
***   File "./lib/python3.5/site-packages/ia636/iacolorhist.py", line 12
    raise Exception,'error, can only process uint8 images'
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ia636/iaffine3.py'...
***   File "./lib/python3.5/site-packages/ia636/iaffine3.py", line 9
    raise ValueError, 'T must be a square matrix'
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ia636/iagshow.py'...
***   File "./lib/python3.5/site-packages/ia636/iagshow.py", line 13
    if (X1.dtype != np.bool): raise Exception,'X1 must be binary overlay'
                                             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ia636/iahaarmatrix.py'...
***   File "./lib/python3.5/site-packages/ia636/iahaarmatrix.py", line 12
    raise Exception, 'error: size '+str(N)+' is not multiple of power of 2'
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ia636/iahadamardmatrix.py'...
***   File "./lib/python3.5/site-packages/ia636/iahadamardmatrix.py", line 19
    raise Exception, 'error: size '+str(N)+' is not multiple of power of 2'
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ia636/ialogfilter.py'...
***   File "./lib/python3.5/site-packages/ia636/ialogfilter.py", line 17
    raise Exception, "error: log filter is not symmetrical"
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ia636/ianormalize.py'...
***   File "./lib/python3.5/site-packages/ia636/ianormalize.py", line 11
    raise Exception, 'error: cannot normalize complex data'
                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/ia636-0.11.7.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
